//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table usuarios {
  id String [pk]
  googleId String [unique]
  nome String
  email String [unique, not null]
  senha String
  avatarUrl String
  cargo Cargo [not null, default: 'USUARIO']
  ativo Boolean [not null, default: true]
  emailVerificado Boolean [not null, default: false]
  criadoEm DateTime [default: `now()`, not null]
  atualizadoEm DateTime [not null]
  comentarios comentarios [not null]
  tecnicoChamado tecnico_chamado [not null]
  chamadosSolicitados chamados [not null]
  tokens tokens [not null]
  convites convites [not null]
  logsChamados logs_chamados [not null]
}

Table tokens {
  id String [pk]
  tipo TipoToken [not null]
  usuario usuarios [not null]
  usuarioId String [not null]
  criadoEm DateTime [default: `now()`, not null]
  validoAte DateTime [not null]
}

Table convites {
  id String [pk]
  email String [unique, not null]
  cargo Cargo [not null]
  criadoEm DateTime [default: `now()`, not null]
  usuario usuarios
  criadoPor String
}

Table categorias {
  id String [pk]
  descricao String [not null]
  ativo Boolean [not null, default: true]
  chamados chamados [not null]
}

Table locais {
  id String [pk]
  nome String [not null]
  avatarUrl String
  ativo Boolean [not null, default: true]
  chamados chamados [not null]
}

Table chamados {
  id String [pk]
  idPublico Int [increment, unique, not null]
  titulo String [not null]
  descricao String [not null]
  execucao String
  status Status [not null, default: 'NOVO']
  prioridade Prioridade [not null, default: 'BAIXA']
  dataAbertura DateTime [default: `now()`, not null]
  dataFechamento DateTime
  dataReabertura DateTime
  atualizadoEm DateTime [not null]
  fechadoPor String
  usuario usuarios [not null]
  abertoPor String [not null]
  categoria categorias
  categoriaId String
  local locais [not null]
  localId String [not null]
  comentarios comentarios [not null]
  tecnico tecnico_chamado
  logs logs_chamados [not null]
}

Table comentarios {
  id String [pk]
  comentario String [not null]
  chamado chamados [not null]
  chamadoId String [not null]
  usuario usuarios [not null]
  usuarioId String [not null]
  criadoEm DateTime [default: `now()`, not null]
  atualizadoEm DateTime [not null]
}

Table tecnico_chamado {
  id String [pk]
  chamado chamados [not null]
  chamadoId String [unique, not null]
  usuario usuarios [not null]
  usuarioId String [not null]
  criadoEm DateTime [default: `now()`, not null]
  atualizadoEm DateTime [not null]
}

Table logs_chamados {
  id String [pk]
  acao AcaoChamado [not null]
  dataHora DateTime [default: `now()`, not null]
  descricao String [not null]
  usuario usuarios [not null]
  usuarioId String [not null]
  chamado chamados [not null]
  chamadoId String [not null]
}

Enum Cargo {
  ADMINISTRADOR
  TECNICO
  USUARIO
}

Enum TipoToken {
  RECUPERAR_SENHA
  DEFINIR_SENHA
  VERIFICAR_EMAIL
}

Enum Status {
  NOVO
  ABERTO
  EM_ANDAMENTO
  EM_ESPERA
  VALIDANDO
  FECHADO
  CANCELADO
}

Enum Prioridade {
  BAIXA
  MEDIA
  ALTA
  URGENTE
}

Enum AcaoChamado {
  ABRIR
  FECHAR
  REABRIR
  CANCELAR
  ALTERAR
}

Ref: tokens.usuarioId > usuarios.id

Ref: convites.criadoPor > usuarios.id [delete: Set Null]

Ref: chamados.abertoPor > usuarios.id

Ref: chamados.categoriaId > categorias.id

Ref: chamados.localId > locais.id

Ref: comentarios.chamadoId > chamados.id

Ref: comentarios.usuarioId > usuarios.id

Ref: tecnico_chamado.chamadoId - chamados.id

Ref: tecnico_chamado.usuarioId > usuarios.id

Ref: logs_chamados.usuarioId > usuarios.id

Ref: logs_chamados.chamadoId > chamados.id